<resources>
    <string name="app_name">SpyWare</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="TEXT_VIEW">text view</string>
    <string name="OkButton">OK</string>
    <!-- Define for information -->
    <string name="MyEmail">Tandd3@viettel.com.vn</string>
    <string name="MyName">Duong Dinh Tan</string>

    <!-- Define for fragment-->
    <string name="default_fragment">THis is default</string>
    <string name="contact_fragment">THis is contact</string>
    <string name="call_fregment">This is call history </string>
    <string name="title_contact">Contact</string>
    <string name="title_callHistory">Call History</string>
    <string name="title_Default">Default</string>
    <string name="title_Image">Image</string>
    <string name="title_Message">Message</string>
    <string name="title_Recorder">Recorder</string>

    <!-- define for tab message -->
    <string name="tab_inbox">Inbox</string>
    <string name="tab_send">Send</string>
    <string name="tab_draft">Draft</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
