<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_image"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/title_Image" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contact_phone_black_24dp"
            android:title="@string/title_contact" />
        <item
            android:id="@+id/nav_call"
            android:icon="@drawable/ic_call_black_24dp"
            android:title="@string/title_callHistory" />
        <item
            android:id="@+id/nav_recorder"
            android:icon="@drawable/ic_record_voice_over_black_24dp"
            android:title="@string/title_Recorder" />
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_message_black_24dp"
            android:title="@string/title_Message" />
    </group>

</menu>
