<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TabLayout
            android:id="@+id/tablayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:tabGravity="fill"
            app:tabIndicatorColor="@color/colorAccent"
            app:tabMode="fixed"
            tools:tabTextColor="@android:color/white">

            <android.support.design.widget.TabItem
                android:id="@+id/tab_inbox"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tab_inbox" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_send"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:saveEnabled="true"
                android:text="@string/tab_send" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_draf"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tab_draft" />

        </android.support.design.widget.TabLayout>


        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tablayout"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>